feat: implement public attachment management
